Finished english CV

--- a/english-cv/curriculum-vitae.tex
+++ b/english-cv/curriculum-vitae.tex
@@ -35,11 +35,11 @@
 %\phone[fixed]{+2~(345)~678~901}
 \email{adriagar@ucm.es}                               % optional, remove / comment the line if not wanted
 %\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
-\social[linkedin]{Adrián García García}                        % optional, remove / comment the line if not wanted
+\social[linkedin]{mizadri}                        % optional, remove / comment the line if not wanted
 %\social[twitter]{jdoe}                             % optional, remove / comment the line if not wanted
 \social[github]{mizadri}                              % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
-\photo[64pt][0.4pt]{carnet}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
+%\photo[64pt][0.4pt]{carnet}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 %\quote{Some quote}                                 % optional, remove / comment the line if not wanted
 
 % bibliography adjustements (only useful if you make citations in your resume, or print a list of publications using BibTeX)
@@ -59,11 +59,17 @@
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
 
-\section{Academic qualifications}
+\section{Education}
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 can be left empty
-\cventry{2011--2016}{Bachelor's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{Average: 7,82}}{} % arguments 3 to 6 can be left empty
-\cventry{2016--Now}{Master's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{Current average: 9,12}}{}
+\cventry{2016--Now}{Master's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{Current average: 9,12.} {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgNFNnQnNJeVNxT00}{Academic Report}}}{}
+\cventry{2011--2016}{Bachelor's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{Average: 7,82 over 10.} {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgUzllSEpXd1BSLWc}{Academic Report}}}{} % arguments 3 to 6 can be left empty
 
+\section{Employment history}
+% \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
+\cventry{Feb.-Jun. (2017)}{System Administrator}{Department of Compuer Architecture and Automatics}{Madrid}{}{Administrated multiple Linux systems and maintained the physical and virtualized infraestructure (kvm).}
+\cventry{Nov. 2016}{Seven months in a colaboration fellowship with university departments}{Department of Computer Architecture and Automatics}{Madrid}{}{Studied and developed a Linux kernel scheduler aware of the effects of shared-resource contention in asymmetric multicore systems. Awarded by the Spanish Ministry of Education, Culture and Sport.}
+\cventry{Sept. 2016}{Developed and deployed a custom Wordpress installation for a Spanish political party {\color{blue}\href{www.ahoraarganda.es}{(link)}}}{}{}{}{}
+\cventry{Apr.-Aug. (2016)}{Internship in Software Developement}{SATEC}{Madrid}{}{Developed web applications in C\# (.NET MVC), Razor and jQuery UI. Specifically, I contributed to build a web application for the government car management system.}
 
 % \section{Master thesis}
 % \cvitem{title}{\emph{Title}}
@@ -73,40 +79,34 @@
 \cventry{June, 2016}{Graduated with special mention in the Final Project}{Complutense University of Madrid}{}{}{\begin{itemize}
 \item \textbf{Title}: Operating system support for improving energy efficiency in asymmetric multicore systems.
 \item \textbf{Director}: Juan Carlos Sáez Alcaide.
-\item \textbf{Department of Computers' architecture and automatic}.
+\item \textbf{Department of Computer architecture and automatic}.
 \end{itemize}}
 \cventry{2011--2016}{Subjects passed with honors on the Bachelor's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{}{\begin{itemize}
 \item Operating Systems
 \item Advanced Operating Systems and Networks
 \item Computer Architecture
-\item Linux and Android kernel architecture
-\item Networks and Security
+\item Linux and Android Internals
+\item Computer Networks Security
 \item Mobile and multicore parallel programming
 \item Databases
-\item Cofiguration assessment
+\item Evaluation of Computer Systems
 \end{itemize}}
 
-\section{Work experience}
-% \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
-\cventry{Apr.-Aug. (2016)}{Internship in Software Developement}{SATEC}{Madrid}{}{Developement of web applications in C\# (.NET MVC), Razor and jQuery UI. Specifically, I contributed to build a web application that managed the government car management system.}
-\cventry{Nov. 2016}{Seven months in a colaboration scholarship with university departments}{Department of Compuer Architecture and Automatics}{Madrid}{}{Study and developement of a Linux kernel scheduler aware of the effects of shared-resource contention in asymmetric multicore systems. Awarded by the Spanish Ministry of Education, Culture and Sport.}
-\cventry{Feb. 2017-Now}{System Administrator}{Department of Compuer Architecture and Automatics}{Madrid}{}{Administration of Linux systems and maintenance of the physical and virtualized infraestructure.}
-\cventry{Aug. 2016}{Deployment and developement in Wordpress of a website for a Spanish political party {\color{blue}\href{www.ahoraarganda.es}{Ahora Arganda}}}{}{}{}{}
 
 \section{Additional information}
 \cventry{12-30-1993}{Spanish}{Native}{}{}{}
 \cventry{Sept. 2016}{English}{Level: C1}{}{}{\begin{itemize}
-\item Cambridge English Certificates
+\item Cambridge certificates:
 \begin{itemize}
   \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfganJjYmFWdlFoanM}{First Certificate in English}} (FCE), Madrid, April 2012.
   \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgcGFJX3VPTGFyUE0}{Certificate in Advanced English}} (CAE), Madrid, September 2016.
 \end{itemize}
-\item English courses with native teachers in Dicken's academy (2011 y 2015).
-\item I stayed one month with a foster family in Athenry (Ireland) while I studied an intensive english course on the mornings (August 2010): {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgSmRCM1NQV2lfdGc}{Certificate}}.
+\item English courses with native teachers in Dicken's academy (Madrid, 2011 and 2015).
+\item Stayed one month with a foster family in Athenry (Ireland) while I studied an intensive english course (August 2010): {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgSmRCM1NQV2lfdGc}{Certificate}}.
 \end{itemize}}
-\cventry{Nov. 2016}{Course in Big Data: data analysis with python}{Complutense University of Madrid}{}{}{Continious formation course of the UCM that teached to gather data from web pages, Twitter and different file formats (csv, xls, txt, etc.) in order to parse them and work with them using different python libraries: numpy, matplotlib and pandas.{\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificate}}.}
+\cventry{Nov. 2016}{Course in Big Data: analysis with python}{Complutense University of Madrid}{}{}{Continious formation course of the UCM that teached to gather data from web pages, Twitter and different file formats (csv, xls, txt, etc.) in order to parse them and work with them using python libraries: numpy, matplotlib and pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificate}}.}
 \section{Other skills}
-\cventry{Known technologies}{}{}{}{}{\begin{itemize}
+\cventry{}{Technologies:}{}{}{}{\begin{itemize}
 \item \textbf{Python}
 \begin{itemize}
   \item Pandas
@@ -117,13 +117,11 @@
 \item \textbf{C}
 \begin{itemize}
   \item Linux kernel modules
-  \item Sockets
-  \item Pipes
+  \item OpenMPI
 \end{itemize}
 \item \textbf{C++}
 \begin{itemize}
   \item OpenMP
-  \item MARE
   \item OpenGL
 \end{itemize}
 \item \textbf{C\#}
@@ -132,27 +130,19 @@
   \item Razor
   \item jQuery UI
 \end{itemize}
-\item \textbf{Android apps} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
 \item \textbf{Java}
 \begin{itemize}
   \item Hibernate
   \item JSP
   \item Maven
 \end{itemize}
-\item \textbf{PHP}
-\item \textbf{JavaScript} (jQuery)
-\item \textbf{CSS} (Boostrap)
-\item \textbf{Bash}
 \medskip
-\end{itemize}}
-\cventry{}{Other technologies}{}{}{}{\begin{itemize}
 \item \textbf{Databases}
   \begin{itemize}
   \item SQL
   \item MongoDB
   \item Neo4J
   \item XML
-  \item Hibernate
 \end{itemize}
 \medskip
 \item \textbf{Big Data}
@@ -160,30 +150,36 @@
   \item Map Reduce
   \item Spark
 \end{itemize}
+\item \textbf{PHP}
+\item \textbf{JavaScript} (jQuery)
+\item \textbf{CSS} (Boostrap)
+\item \textbf{Bash}
+\medskip
+\end{itemize}}
+\cventry{}{Projects:}{}{}{}{\begin{itemize}
+\item \textbf{Android app.} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
+\medskip
+\item \textbf{Embedded systems.} Double authentication system with RFID and password using 2 Arduino Uno boards and a Raspberry Pi 2 ({\color{blue}\href{https://github.com/mizadri/big-data}{repository}}). 
 \medskip
 \item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{python implementations}}):
   \begin{itemize}
     \item ID3 classification trees.
-    \item Complete Index (Data compressions: variable-bytes, elias-gamma or elias-delta).
+    \item Complete Index (Data compression using variable-bytes, elias-gamma or elias-delta).
     \item Vectorial Index.
     \item Naive Bayes.
   \end{itemize}
-  \medskip
-\end{itemize}}
-\cventry{}{}{}{}{}{\begin{itemize}
-\item \textbf{Network administration and virtualization}
-\begin{itemize}
-  \item IPv4 e IPv6 network configuration. Persistent with \textit{vtysh}(similar to CISCO syntax but Open Source).
-  \item System administration via SSH.
-  \item Virtual Machine management with kvm (\textit{virsh} and \textit{virt-manager}).
-  \item Docker configuration and deployment.
-\end{itemize}
 \medskip
 \item \textbf{LaTeX for Scientific papers and reports} ({\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgdng1eHFyU1JPY1U}{Final Project}} or {\color{blue}\href{https://github.com/mizadri/LaTeX}{this CV}})
-\item \textbf{Version control software} ({\color{blue}\href{https://github.com/mizadri/}{GitHub}})
-\item Driving license.
 \medskip
+\item \textbf{Version control software} ({\color{blue}\href{https://github.com/mizadri/}{GitHub profile}})
 \end{itemize}}
+
+
+\section{References}
+% \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
+\cventry{}{Manuel Prieto Matías}{Associate Professor at Complutense Univerity of Madrid}{mpmatias@ucm.es}{Research group website {\color{blue}\href{https://artecs.dacya.ucm.es/}{(ArTeCs)}}}{}
+\cventry{}{Juan Carlos Sáez Alcaide}{Associate Professor at Complutense Univerity of Madrid}{jcsaezal@ucm.es}{Research group website {\color{blue}\href{https://artecs.dacya.ucm.es/}{(ArTeCs)}}}{}
+
 
 \nocite{*}
 \bibliographystyle{plain}
