Advance on runtime assingment

--- a/english-cv/curriculum-vitae.tex
+++ b/english-cv/curriculum-vitae.tex
@@ -159,7 +159,7 @@
 \cventry{}{Projects:}{}{}{}{\begin{itemize}
 \item \textbf{Android app.} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
 \medskip
-\item \textbf{Embedded systems.} Double authentication system with RFID and password using 2 Arduino Uno boards and a Raspberry Pi 2 ({\color{blue}\href{https://github.com/mizadri/big-data}{repository}}). 
+\item \textbf{Embedded systems.} Double authentication system with RFID and password using 2 Arduino Uno boards and a Raspberry Pi 2 ({\color{blue}\href{https://github.com/mizadri/sed-raspduino}{repository}}). 
 \medskip
 \item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{python implementations}}):
   \begin{itemize}
